--- a/src/components/ui/modal/Modal.module.scss
+++ b/src/components/ui/modal/Modal.module.scss
@@ -50,7 +50,7 @@
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-	padding: 10px 0;
+	padding: 10px;
 }
 
 .header {
